@@ -55,7 +55,8 @@ function update_poller_cache($local_data_id, $truncate_performed = false) {
 		data_input.type_id,
 		data_template_data.id as data_template_data_id,
 		data_template_data.data_template_id,
-		data_template_data.active
+		data_template_data.active,
+		data_template_data.rrd_step
 		from (data_template_data,data_input)
 		where data_template_data.data_input_id=data_input.id
 		and data_template_data.local_data_id=$local_data_id");
@@ -109,7 +110,7 @@ function update_poller_cache($local_data_id, $truncate_performed = false) {
 				$data_source_item_name = "";
 			}
 
-			api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, $action, $data_source_item_name, 1, addslashes($script_path));
+			api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, $data_input["rrd_step"], $action, $data_source_item_name, 1, addslashes($script_path));
 		}else if ($data_input["type_id"] == DATA_INPUT_TYPE_SNMP) { /* snmp */
 			$host_fields = array_rekey(db_fetch_assoc("select
 				data_input_fields.type_code,
@@ -128,7 +129,7 @@ function update_poller_cache($local_data_id, $truncate_performed = false) {
 
 			$data_template_rrd_id = db_fetch_cell("select id from data_template_rrd where local_data_id=$local_data_id");
 
-			api_poller_cache_item_add($data_source["host_id"], $host_fields, $local_data_id, 0, get_data_source_item_name($data_template_rrd_id), 1, (isset($host_fields["snmp_oid"]) ? $host_fields["snmp_oid"] : ""));
+			api_poller_cache_item_add($data_source["host_id"], $host_fields, $local_data_id, $data_input["rrd_step"], 0, get_data_source_item_name($data_template_rrd_id), 1, (isset($host_fields["snmp_oid"]) ? $host_fields["snmp_oid"] : ""));
 		}else if ($data_input["type_id"] == DATA_INPUT_TYPE_SNMP_QUERY) { /* snmp query */
 			$snmp_queries = get_data_query_array($data_source["snmp_query_id"]);
 
@@ -139,7 +140,7 @@ function update_poller_cache($local_data_id, $truncate_performed = false) {
 				}
 
 				if (!empty($oid)) {
-					api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, 0, get_data_source_item_name($output["data_template_rrd_id"]), sizeof($outputs), $oid);
+					api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, $data_input["rrd_step"], 0, get_data_source_item_name($output["data_template_rrd_id"]), sizeof($outputs), $oid);
 				}
 			}
 			}
@@ -165,7 +166,7 @@ function update_poller_cache($local_data_id, $truncate_performed = false) {
 					}
 
 					if (isset($script_path)) {
-						api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, $action, get_data_source_item_name($output["data_template_rrd_id"]), sizeof($outputs), addslashes($script_path));
+						api_poller_cache_item_add($data_source["host_id"], array(), $local_data_id, $data_input["rrd_step"], $action, get_data_source_item_name($output["data_template_rrd_id"]), sizeof($outputs), addslashes($script_path));
 					}
 				}
 			}
