@@ -51,6 +51,7 @@ Cacti CHANGELOG
 -feature: Add filterint to data input methods
 -feature: Add Web Basic authentication 
 -feature: Add authenication realm to modifiable user parameters
+-feature: Add multiple polling intervals
 
 0.8.6j
 -bug#0000842: SNMPv3 password field does not check if entered passwords match.
